fixed: picker mask z-index

--- a/src/styles/picker/_core.scss
+++ b/src/styles/picker/_core.scss
@@ -1,5 +1,4 @@
 .#{$ui-prefix}-picker{
-
   &.open{
     .#{$ui-prefix}-picker-mask{
       top: 0;
@@ -23,6 +22,7 @@
     bottom: 0;
     left: 0;
     right: 0;
+    z-index: 1000;
     background-color: rgba(0, 0, 0, .6);
   }
   &-header{
